src/test/ui/consts/const-eval/union-const-eval-field.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/union-const-eval-field.rs:28:37
   |
LL |     const FIELD3: Field3 = unsafe { UNION.field3 };
   |                                     ^^^^^^^^^^^^ using uninitialized data, but this operation requires initialized memory

error[E0080]: erroneous constant used
  --> $DIR/union-const-eval-field.rs:31:5
   |
LL |     FIELD3
   |     ^^^^^^ referenced constant has errors

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
